--- a/docs/api/carts/delete-a-cart-by-id.api.mdx
+++ b/docs/api/carts/delete-a-cart-by-id.api.mdx
@@ -5,7 +5,7 @@ description: "Delete a cart by ID."
 sidebar_label: "Delete a cart by ID"
 hide_title: true
 hide_table_of_contents: true
-api: {"tags":["cart"],"parameters":[{"in":"path","name":"id","required":true,"description":"Cart ID","example":"9597879817","schema":{"type":"string"}}],"responses":{"400":{"description":"400 - Bad request","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":400,"detail":"","title":"Bad input request"}}}},"description":"Provided input is invalid"}}}},"401":{"description":"401 - Unauthorized","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":401,"detail":"","title":"Authentication information is missing or invalid"}}}},"description":"Authentication information is missing or invalid"}}}},"404":{"description":"404 - Not found","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":404,"detail":"","title":"Not Found"}}}},"description":"Not Found"}}}},"5XX":{"description":"500 - Unknown error","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":500,"detail":"","title":"Unknown error"}}}},"description":"Unknown error"}}}}},"description":"Delete a cart by ID.","method":"delete","path":"/{id}","servers":[{"url":"https://api.shopbonsai.ca/carts"}],"security":[{"APIKeyHeader":[]}],"securitySchemes":{"APIKeyHeader":{"type":"apiKey","name":"API-Key","in":"header"}},"info":{"title":"Carts API","description":"API for creating, reading, updating, and deleting carts.","version":"0.8.30","contact":{"email":"developers@shopbonsai.ca"}},"postman":{"name":"Delete a cart by ID","description":{"content":"Delete a cart by ID.","type":"text/plain"},"url":{"path":[":id"],"host":["{{baseUrl}}"],"query":[],"variable":[{"disabled":false,"description":{"content":"(Required) Cart ID","type":"text/plain"},"type":"any","value":"","key":"id"}]},"header":[{"key":"Accept","value":"application/json"}],"method":"DELETE"}}
+api: {"tags":["cart"],"parameters":[{"in":"path","name":"id","required":true,"description":"Cart ID","example":"9597879817","schema":{"type":"string"}}],"responses":{"400":{"description":"400 - Bad request","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":400,"detail":"","title":"Bad input request"}}}},"description":"Provided input is invalid"}}}},"401":{"description":"401 - Unauthorized","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":401,"detail":"","title":"Authentication information is missing or invalid"}}}},"description":"Authentication information is missing or invalid"}}}},"404":{"description":"404 - Not found","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":404,"detail":"","title":"Not Found"}}}},"description":"Not Found"}}}},"5XX":{"description":"500 - Unknown error","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":500,"detail":"","title":"Unknown error"}}}},"description":"Unknown error"}}}}},"description":"Delete a cart by ID.","method":"delete","path":"/v1/{id}","servers":[{"url":"https://api.shopbonsai.ca/carts"}],"security":[{"APIKeyHeader":[]}],"securitySchemes":{"APIKeyHeader":{"type":"apiKey","name":"API-Key","in":"header"}},"info":{"title":"Carts API","description":"API for creating, reading, updating, and deleting carts.","version":"0.8.30","contact":{"email":"developers@shopbonsai.ca"}},"postman":{"name":"Delete a cart by ID","description":{"content":"Delete a cart by ID.","type":"text/plain"},"url":{"path":["v1",":id"],"host":["{{baseUrl}}"],"query":[],"variable":[{"disabled":false,"description":{"content":"(Required) Cart ID","type":"text/plain"},"type":"any","value":"","key":"id"}]},"header":[{"key":"Accept","value":"application/json"}],"method":"DELETE"}}
 sidebar_class_name: "delete api-method"
 info_path: docs/api/carts/carts-api
 custom_edit_url: null
